# libhap

./: CMakeLists.txt  READEME.md
include/: Accessory.h  AccessoryBridge.h  AccessoryCategory.h  CharacteristcType.h  Characteristic.h  CharacteristicAs.h  CharacteristicFormat.h  CharacteristicPermission.h  CharacteristicUnit.h  IDInternal.h  IPrimaryAccessory.h  ParentAccessory.h  PrimaryAccessory.h  Service.h  ServiceType.h
include/server/: ControllerDevice.h  EncryptedHTTPSocket.h  EncryptionKeyStore.h  HAPServer.h  PairingHandler.h
include/server/crypto/: ChaCha20Poly1305.h  Ed25519.h  EncryptionKeyStore.h  HKDF.h  SRP.h
include/server/dns_sd/: TXTRecord.h
include/server/http/: HTTPMethod.h  HTTPStatus.h  Request.h  Response.h
include/server/tlv/: TLVError.h  TLVMethod.h  TLVType.h
service/: CMakeLists.txt  service.cpp
src/: Accessory.cpp  AccessoryBridge.cpp  AccessoryInternal.cpp  CMakeLists.txt  Characteristic.cpp  CharacteristicFormat.cpp  CharacteristicInternal.cpp  CharacteristicPermission.cpp  CharacteristicUnit.cpp  HasJSON.cpp  PrimaryAccessory.cpp  PrimaryAccessoryInternal.cpp  Service.cpp  ServiceInternal.cpp  log.cpp
src/private_include/: AccessoryInternal.h  CharacteristicAsInternal.h  CharacteristicInternal.h  HasJSON.h  PrimaryAccessoryInternal.h  ServiceInternal.h  log.h
src/private_include/server/: ControllerDevice.h  EncryptedHTTPSocket.h  HAPServer.h  HAPStatus.h
src/private_include/server/crypto/: ChaCha20Poly1305.h  Ed25519.h  SRP.h
src/private_include/server/dns_sd/: TXTRecord.h
src/private_include/server/http/: EventResponse.h  HTTPMethod.h  HTTPStatus.h  Request.h  Response.h
src/private_include/server/tlv/: TLVData.h
src/server/: CMakeLists.txt  ControllerDevice.cpp  EncryptedHTTPSocket.cpp  EncryptionKeyStore.cpp  HAPServer.cpp  PairingHandler.cpp
src/server/crypto/: CMakeLists.txt  ChaCha20Poly1305.cpp  Ed25519.cpp  EncryptionKeyStore.cpp  HKDF.cpp  SRP.cpp
src/server/dns_sd/: CMakeLists.txt  FindDNSSD.cmake  TXTRecord.cpp
src/server/http/: CMakeLists.txt  EventResponse.cpp  HTTPMethod.cpp  Request.cpp  Response.cpp
src/server/tlv/: CMakeLists.txt  TLVData.cpp
test/: Accessory.cpp  AccessoryBridge.cpp  CMakeLists.txt  Characteristic.cpp  CharacteristicAs.cpp  CharacteristicInternal.cpp  Service.cpp  test.cpp
test/server/: CMakeLists.txt
test/server/crypto/: CMakeLists.txt  ChaCha20Poly1305.cpp  Ed25519.cpp  SRP.cpp
test/server/http/: CMakeLists.txt  Request.cpp  Response.cpp
